--- a/app/views/analyses/index.html.erb
+++ b/app/views/analyses/index.html.erb
@@ -7,17 +7,63 @@
     <div class="col-6">
       <div class="card">
         <div class="card-body">
-          
+          <canvas id="chart-1"></canvas>
         </div>
       </div>
     </div>
     <div class="col-6">
       <div class="card">
         <div class="card-body">
-          
+          <canvas id="chart-2"></canvas>
         </div>
       </div>
     </div>
 
   </div>
 </div>
+
+<script>
+var ctx = document.getElementById("chart-1").getContext('2d');
+var myChart = new Chart(ctx, {
+    type: 'bar',
+    data: {
+        labels: <%= raw address_count_keys %>,
+        datasets: [{
+            label: "TOP5",
+            data: <%= raw address_count_values %>,
+            backgroundColor: 'rgba(255, 99, 132, 1.0)',
+            borderColor: 'rgba(255, 50, 132, 1.0)',
+            fill: false
+        }]
+    },
+    options: {
+        title:  {
+          display: true,
+          text: "都道府県別の飲酒回数"
+        }
+    }
+});
+</script>
+
+<script>
+var ctx = document.getElementById("chart-2").getContext('2d');
+var myChart = new Chart(ctx, {
+    type: 'bar',
+    data: {
+        labels: <%= raw evaluation_prefecture_keys %>,
+        datasets: [{
+            label: "TOP5",
+            data: <%= raw evaluation_prefecture_values %>,
+            backgroundColor: 'rgba(255, 99, 132, 1.0)',
+            borderColor: 'rgba(255, 50, 132, 1.0)',
+            fill: false
+        }]
+    },
+    options: {
+        title:  {
+          display: true,
+            text: "県別の評価点数"
+        }
+    }
+});
+</script>
