ちょい修正

--- a/app/views/analyses/index.html.erb
+++ b/app/views/analyses/index.html.erb
@@ -4,7 +4,7 @@
 
   <div class="row">
     <% if @posts.empty? %>
-      <div class="text-danger">投稿がないため表示できません。</div>
+      <div class="col-12 text-danger text-center">投稿がないため表示できません。</div>
     <% else %>
       <div class="col-6 mb-5">
         <div class="card">
