--- a/app/views/analyses/index.html.erb
+++ b/app/views/analyses/index.html.erb
@@ -6,20 +6,21 @@
     <% if @posts.empty? %>
       <div class="col-12 text-danger text-center">投稿がないため表示できません。</div>
     <% else %>
-      <div class="col-6 mb-5">
+      <!--<div class="col-6 mb-5">-->
+      <div class="col-12 mb-5">
         <div class="card">
           <div class="card-body">
             <canvas id="chart-1"></canvas>
           </div>
         </div>
       </div>
-      <div class="col-6">
-        <div class="card">
-          <div class="card-body">
-            <canvas id="chart-2"></canvas>
-          </div>
-        </div>
-      </div>
+      <!--<div class="col-6">-->
+      <!--  <div class="card">-->
+      <!--    <div class="card-body">-->
+      <!--      <canvas id="chart-2"></canvas>-->
+      <!--    </div>-->
+      <!--  </div>-->
+      <!--</div>-->
     <% end %>
   </div>
 </div>
@@ -33,8 +34,8 @@ var myChart = new Chart(ctx, {
         datasets: [{
             label: "TOP5",
             data: <%= raw address_count_values %>,
-            backgroundColor: 'rgba(255, 99, 132, 1.0)',
-            borderColor: 'rgba(255, 50, 132, 1.0)',
+            backgroundColor: 'rgba(38, 164, 242, 0.83)',
+            borderColor: 'rgba(38, 164, 242, 0.83)',
             fill: false
         }]
     },
